--- a/src/styles/bookDetailsView.css
+++ b/src/styles/bookDetailsView.css
@@ -29,3 +29,29 @@
   height: fit-content;
   width: 10rem;
 }
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+  height: fit-content;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 8rem;
+  background-color: #684526;
+  color: white;
+  text-align: center;
+  padding: 0.25rem;
+  border: 1px solid #684526;
+  border-radius: 6px;
+  position: absolute;
+  z-index: 1;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -4rem; /* Use half of the width, to center the tooltip */
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
