feat: Add global background color and bold buttons

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 * {
   font-family: 'Raleway', sans-serif;
   font-weight: 300;
+  background-color: #FFFBF5;
 }
 
 h1,
@@ -9,4 +10,8 @@ h3,
 h4 {
   font-family: 'Grandstander', cursive;
   font-weight: 600;
+}
+
+button {
+  font-weight: bold;
 }
