--- a/src/App.css
+++ b/src/App.css
@@ -14,4 +14,12 @@ h4 {
 
 button {
   font-weight: bold;
+  min-width: 10rem;
+  background-color: white;
+  color: #684526;
+  text-align: center;
+  padding: 0.25rem;
+  border: 1px solid #684526;
+  border-radius: 3px;
+  cursor: pointer;
 }
