--- a/src/styles/landingView.css
+++ b/src/styles/landingView.css
@@ -27,6 +27,9 @@ body {
   width: 35%;
   margin-top: 20%;
   margin-left: 35px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .library-image {
