--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 * {
   font-family: 'Raleway', sans-serif;
   font-weight: 300;
-  background-color: #FFFBF5;
 }
 
 h1,
@@ -14,6 +13,8 @@ h4 {
 
 .App {
   min-height: 100vh;
+  background-color: #FFFBF5;
+  position: relative;
 } 
 
 button {
