--- a/src/styles/landingView.css
+++ b/src/styles/landingView.css
@@ -4,8 +4,9 @@ body {
 }
 
 .landing-container {
-  width: full;
-  height: 100%;
+  width: 100%;
+  height: 100vh;
+  margin-top: -60px;
   background-color: #E4FCFF;
 }
 
@@ -14,7 +15,6 @@ body {
   position: fixed;
   width: 100%;
   height: 125px;
-  z-index: -1;
 }
 
 .landing-foreground {
@@ -24,9 +24,28 @@ body {
 }
 
 .landing-text {
+  display: flex;
+  flex-direction: column;
   width: 35%;
-  margin-top: 20%;
-  margin-left: 35px;
+  justify-content: center;
+}
+
+.landing-title {
+  font-family: 'Grandstander', cursive;
+  font-size: 2.25rem;
+  margin: 0;
+}
+
+.landing-button {
+  background-color: #A4CB91;
+  color: white;
+  border: 1px solid #A4CB91;
+}
+
+.landing-button:hover {
+  background-color: white;
+  color: #A4CB91;
+  border: 1px solid #A4CB91;
 }
 
 .library-image {
@@ -38,5 +57,6 @@ body {
   position: fixed;
   right: 0;
   margin-right: 40px;
+  z-index: 2;
 }
 
