--- a/src/styles/errorView.css
+++ b/src/styles/errorView.css
@@ -42,3 +42,15 @@ body {
   right: 0;
   margin-right: 40px;
 }
+
+.error-button {
+  background-color: #A4CB91;
+  color: white;
+  border: 1px solid #A4CB91;
+}
+
+.error-button:hover {
+  background-color: white;
+  color: #A4CB91;
+  border: 1px solid #A4CB91;
+}
