--- a/src/styles/errorView.css
+++ b/src/styles/errorView.css
@@ -5,16 +5,9 @@ body {
 
 .error-container {
   width: full;
-  height: 100%;
+  height: 100vh;
+  margin-top: -110px;
   background-color: #E4FCFF;
-}
-
-.grass-image {
-  bottom: 0;
-  position: fixed;
-  width: 100%;
-  height: 125px;
-  z-index: -1;
 }
 
 .error-foreground {
@@ -25,23 +18,27 @@ body {
 
 .error-text {
   width: 35%;
-  margin-top: 20%;
-  margin-left: 35px;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
 }
 
-.library-image {
-  height: 90%;
-  min-height: 500px;
-  width: 55%;
-  min-width: 300px;
-  bottom: 0;
-  position: fixed;
-  right: 0;
-  margin-right: 40px;
+.error-img {
+  margin-top: 3rem;
+  margin-bottom: 1rem;
 }
+
+.error-title {
+  font-family: 'Grandstander', cursive;
+  font-size: 2.25rem;
+  margin: 0;
+}
+
+.error-desc {
+  text-align: center;
+}
+
 
 .error-button {
   background-color: #A4CB91;
@@ -53,4 +50,22 @@ body {
   background-color: white;
   color: #A4CB91;
   border: 1px solid #A4CB91;
+
+}
+.library-image {
+  height: 90%;
+  min-height: 500px;
+  width: 55%;
+  min-width: 300px;
+  bottom: 0;
+  position: fixed;
+  right: 0;
+  margin-right: 40px;
+}
+
+.grass-image {
+  bottom: 0;
+  position: fixed;
+  width: 100%;
+  height: 125px;
 }
