--- a/src/styles/landingView.css
+++ b/src/styles/landingView.css
@@ -6,12 +6,12 @@ body {
 .landing-container {
   width: 100%;
   height: 100vh;
-  margin-top: -60px;
+  margin-top: -110px;
   background-color: #E4FCFF;
 }
 
 .grass-image {
-  bottom: 0;
+  bottom: 0px;
   position: fixed;
   width: 100%;
   height: 125px;
@@ -46,6 +46,7 @@ body {
   background-color: white;
   color: #A4CB91;
   border: 1px solid #A4CB91;
+  cursor: pointer;
 }
 
 .library-image {
@@ -53,7 +54,7 @@ body {
   min-height: 500px;
   width: 55%;
   min-width: 300px;
-  bottom: 0;
+  bottom: 0px;
   position: fixed;
   right: 0;
   margin-right: 40px;
