--- a/src/styles/bookDetailsView.css
+++ b/src/styles/bookDetailsView.css
@@ -5,8 +5,26 @@
   margin: 4rem 10rem;
 }
 
+.books-top-container {
+  margin-right: 14rem;
+  padding: 0.5rem;
+}
+
+.books-top-left {
+  display: flex;
+  justify-content: space-between;
+}
+
 .books-bottom-container {
   flex-direction: column;
+  padding: 1.5rem 3rem;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+  border-radius: 1.5rem
+}
+
+.books-bottom-container > h3 {
+  margin-bottom: 0;
 }
 
 .books-details {
@@ -26,6 +44,7 @@
 .books-image {
   height: 193px;
   width: 128px;
+  border-radius: 3px;
 }
 
 .books-title {
@@ -42,38 +61,48 @@
   margin: 0.5rem 0 0 0;
 }
 
+.books-desc {
+  line-height: 1.5;
+}
+
+.tooltip {
+  
+  position: relative;
+  display: inline-block;
+  height: fit-content;
+}
+
 .books-remove-button {
-  margin: 0.5rem;
   width: 10rem;
   height: 2rem;
-  background-color: white;
-  color: #684526;
+  background-color: #A4CB91;
+  color: black;
+  border: 1px solid #A4CB91;
   text-align: center;
   padding: 0.25rem;
-  border: 1px solid #684526;
   border-radius: 3px;
   cursor: pointer;
 }
 
-.tooltip {
-  position: relative;
-  display: inline-block;
+.books-remove-button:hover {
+  background-color: white;
+  color: black;
 }
 
 .tooltip .tooltiptext {
   visibility: hidden;
   width: 8rem;
-  background-color: #684526;
-  color: white;
+  background-color: rgba(164, 203, 145, .7);
+  color: black;
+  border: 1px solid #A4CB91;
   text-align: center;
   padding: 0.25rem;
-  border: 1px solid #684526;
   border-radius: 6px;
   position: absolute;
   z-index: 1;
-  bottom: 100%;
+  bottom: 110%;
   left: 50%;
-  margin-left: -4rem; /* Use half of the width, to center the tooltip */
+  margin-left: -4.25rem; /* Use half of the width, to center the tooltip */
 }
 
 .tooltip:hover .tooltiptext {
