--- a/src/styles/libraryDetailsView.css
+++ b/src/styles/libraryDetailsView.css
@@ -4,3 +4,8 @@
     justify-content: space-evenly;
     align-items: center;
 }
+
+.addBookBtn {
+    padding: 0.5em 2em 0.5em 2em;
+    margin-bottom: 2em;
+}
