--- a/src/styles/libraryDetailsView.css
+++ b/src/styles/libraryDetailsView.css
@@ -7,5 +7,17 @@
 
 .addBookBtn {
     padding: 0.5em 2em 0.5em 2em;
-    margin-bottom: 2em;
+    margin-bottom: 2.5em;
+}
+
+.books-section {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-gap: 3em;
+    margin-bottom: 4em;
+}
+
+.book {
+    width: 105%;
+    height: 105%;
 }
