--- a/src/styles/libraryDetailsView.css
+++ b/src/styles/libraryDetailsView.css
@@ -13,6 +13,8 @@
 .form-container {
     display: flex;
     flex-direction: column;
+    /* background-color: rgb(245, 195, 103); */
+    margin-bottom: 5em;
 }
 
 .books-section {
