--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -1,14 +1,25 @@
 form {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 #isbn-input {
     height: 2em;
+    width: 20em;
     background-color: white;
-    margin-bottom: 1em;
+    margin-bottom: 0.5em;
 }
 
 .add-book-btn {
+    width: 1.5em;
     margin-bottom: 0.5em;
+}
+
+.add-book-btn:hover {
+    background-color: rgb(254, 225, 171);
+}
+
+.comment {
+    color: #684526;
 }
