--- a/src/styles/landingView.css
+++ b/src/styles/landingView.css
@@ -36,16 +36,8 @@ body {
   margin: 0;
 }
 
-.landing-button {
-  background-color: #A4CB91;
-  color: white;
-  border: 1px solid #A4CB91;
-}
-
 .landing-button:hover {
-  background-color: white;
-  color: #A4CB91;
-  border: 1px solid #A4CB91;
+  background-color: rgb(254, 225, 171);
   cursor: pointer;
 }
 
