--- a/src/styles/libraryDetailsView.css
+++ b/src/styles/libraryDetailsView.css
@@ -1,3 +1,11 @@
+@media (max-width: 767px) {
+    .library-details-page {
+        width: 100%;
+        height: 100%;
+    }
+    
+}
+  
 .library-details-page {
     display: flex;
     flex-direction: column;
