feat: add media query for libraryInfo

--- a/src/styles/libraryDetailsView.css
+++ b/src/styles/libraryDetailsView.css
@@ -3,9 +3,13 @@
         width: 100%;
         height: 100%;
     }
-    
+
 }
   
+@media (min-width: 768px) {
+
+}
+
 .library-details-page {
     display: flex;
     flex-direction: column;
