--- a/src/styles/libraryDetailsView.css
+++ b/src/styles/libraryDetailsView.css
@@ -4,10 +4,35 @@
         height: 100%;
     }
 
+    .book {
+        width: 100%;
+        height: 100%;
+    }
+
+    .books-section {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 1em;
+        margin-bottom: 2em;
+        margin-left: 1.5em;
+        margin-right: 1.5em;
+    }
 }
   
 @media (min-width: 768px) {
+    .book {
+        width: 105%;
+        height: 105%;
+    }
 
+    .books-section {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        grid-gap: 2em;
+        margin-bottom: 4em;
+        margin-left: 2.5em;
+        margin-right: 2.5em;
+    }
 }
 
 .library-details-page {
@@ -40,16 +65,4 @@
 
 .hide-form-btn:hover {
     background-color: rgb(254, 225, 171);
-}
-
-.books-section {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-gap: 3em;
-    margin-bottom: 4em;
-}
-
-.book {
-    width: 105%;
-    height: 105%;
 }
