--- a/src/styles/errorView.css
+++ b/src/styles/errorView.css
@@ -1,3 +1,39 @@
+@media (max-width: 767px) {
+  .library-image {
+    display: none;
+  }
+
+  .error-text {
+    width: 100%;
+    z-index: 1;
+  }
+
+  .grass-image {
+    height: 0em;
+  }
+}
+
+@media (min-width: 768px) {
+  .library-image {
+    height: 90%;
+    min-height: 500px;
+    width: 55%;
+    min-width: 300px;
+    bottom: 0;
+    position: fixed;
+    right: 0;
+    margin-right: 40px;
+  }
+
+  .error-text {
+    width: 35%;
+  }
+
+  .grass-image {
+    height: 125px;
+  }
+}
+  
 body {
   background: #E4FCFF;
   background-size: cover;
@@ -17,7 +53,6 @@ body {
 }
 
 .error-text {
-  width: 35%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -44,20 +79,8 @@ body {
   cursor: pointer;
 }
 
-.library-image {
-  height: 90%;
-  min-height: 500px;
-  width: 55%;
-  min-width: 300px;
-  bottom: 0;
-  position: fixed;
-  right: 0;
-  margin-right: 40px;
-}
-
 .grass-image {
   bottom: 0;
   position: fixed;
   width: 100%;
-  height: 125px;
 }
