--- a/src/styles/libraryDetailsView.css
+++ b/src/styles/libraryDetailsView.css
@@ -7,6 +7,8 @@
     .book {
         width: 100%;
         height: 100%;
+        box-shadow: 5px 5px 5px rgba(0,0,0,0.75);
+        opacity: 0.9;
     }
 
     .books-section {
@@ -21,8 +23,15 @@
   
 @media (min-width: 768px) {
     .book {
-        width: 105%;
-        height: 105%;
+        width: 95%;
+        height: 95%;
+        box-shadow: 10px 10px 10px rgba(0,0,0,0.75);
+        opacity: 0.9;
+    }
+
+    .book:hover {
+        box-shadow: 20px 20px 20px rgba(0,0,0,0.75);
+        opacity: 1;
     }
 
     .books-section {
@@ -56,6 +65,7 @@
 
 .addBookBtn:hover {
     background-color: rgb(254, 225, 171);
+    box-shadow: 5px 5px 5px rgba(0,0,0,0.75);
 }
 
 .hide-form-btn {
