--- a/src/styles/landingView.css
+++ b/src/styles/landingView.css
@@ -1,32 +1,3 @@
-@media (max-width: 767px) {
-  .library-image {
-    z-index: -2;
-  }
-
-  .landing-text {
-    width: 100%;
-  }
-}
-
-@media (min-width: 768px) {
-  .library-image {
-    height: 90%;
-    min-height: 500px;
-    width: 55%;
-    min-width: 300px;
-    bottom: 0px;
-    position: fixed;
-    right: 0;
-    margin-right: 40px;
-    z-index: 2;
-  }
-
-  .landing-text {
-    width: 35%;
-  }
-}
-
-
 body {
   background: #E4FCFF;
   background-size: cover;
@@ -49,7 +20,7 @@ body {
 .landing-foreground {
   display: flex;
   margin: 0px 48px;
-  height: 100%;
+  height: 100vh;
 }
 
 .landing-text {
@@ -69,3 +40,46 @@ body {
   cursor: pointer;
 }
 
+@media (max-width: 767px) {
+  .landing-container {
+    padding-top: 140px;
+    height: auto;
+  }
+
+  .landing-foreground {
+    flex-direction: column;
+  }
+
+  .library-image {
+    margin-top: 50px;
+    height: 75%;
+    z-index: 1;
+  }
+
+  .landing-text {
+    width: 100%;
+    text-align: center;
+  }
+
+  .landing-button {
+    margin-top: 20px;
+  }
+}
+
+@media (min-width: 768px) {
+  .library-image {
+    height: 90%;
+    min-height: 500px;
+    width: 55%;
+    min-width: 300px;
+    bottom: 0px;
+    position: fixed;
+    right: 0;
+    margin-right: 40px;
+    z-index: 2;
+  }
+
+  .landing-text {
+    width: 35%;
+  }
+}
